--- a/intranet/htdocs/intranet-tmpl/catalogacion/estructura/mostrarCatalogacion.tmpl
+++ b/intranet/htdocs/intranet-tmpl/catalogacion/estructura/mostrarCatalogacion.tmpl
@@ -12,26 +12,25 @@
 <fieldset class="resultados_busqueda">
     <legend class="titulo_legend trigger click">[% "Campos Modificados del nivel" | i18n %]:</legend>
         <div class="datos_tabla_div" id="datos_tabla_div">
-        <table id="tablaCamposMod" class="table table-striped">
+        
+        [% PERL %]
+                print C4::AR::Filtros::tableHeader(   
+                                  id              => "creacionCatalogo_table",
+                                  class           => "",
+                                  selectAll_id    => "",
+                                  columns         => ['[% "MARC"|i18n %]','[% "Vista en Intranet"|i18n %]','[% "Tipo"|i18n %]',
+                                                    '[% "Validador"|i18n %]','[% "Referencia"|i18n %]','[% "Campo referencia"|i18n %]',
+                                                    '[% "Orden"|i18n %]','[% "Fijo"|i18n %]','[% "Obligatorio"|i18n %]',
+                                                    '[% "Visible"|i18n %]','[% "Esquema"|i18n %]','[% "Acciones"|i18n %]',
+                                                     ]
 
-	        <tr class="titulo_tabla_resultado">
+                                                                    
+                                        ) ;
+        [% END %]
 
-		        <td width="10%">[% 'MARC' | i18n %]</td>
-		        <td width="20%">[% 'Vista en Intranet' | i18n %]</td>
-                <td width="10%">[% 'Tipo' | i18n %]</td>
-                <td width="10%">[% 'Validador' | i18n %]</td>
-                <td width="10%">[% 'Referencia' | i18n %]</td>
-                <td width="10%">[% 'Campo referencia' | i18n %]</td>
-                <td width="10%">[% 'Orden' | i18n %]</td>
-                <td width="4%">[% 'Fijo' | i18n %]</td>
-                <td width="5%">[% 'Obligatorio' | i18n %]</td>
-                <td width="5%">[% 'Visible' | i18n %]</td>
-                <td width="5%">[% 'Esquema' | i18n %]</td>
-                <td width="5%">[% 'Acciones' | i18n %]</td>
-
-	        </tr>
+        <tdoby>
         [% FOREACH catalogacion IN catalogaciones %]
-	        <tr align="center" >
+	        <tr>
     
 		        <td>
 			        <b>[% catalogacion.getCampo %]</b>, <b>[% catalogacion.getSubcampo %]</b>
@@ -95,31 +94,33 @@
                 <td>
                 
                 [% IF catalogacion.soyFijo != 1 %]
-                        [% PERL %]
-                            print C4::AR::Filtros::to_Icon(    
-                                                                boton   => "icon_edicion",
-                                                                onClick => "mostrarModificarCampo('[% catalogacion.getId %]');",
-                                                                title   => "[% 'Modificar Campo' | i18n %]",
-                                                                alternClass => "botonCentradoTabla"
-                                    ) ;
-                        [% END %]
-                [% END %]
                 
-                [% IF catalogacion.soyFijo != 1 %]
-                        [% PERL %]
-                            print C4::AR::Filtros::to_Icon(    
-                                                                boton   => "icon_borrar",
-                                                                onClick => "eliminarCampo('[% catalogacion.getId %]');",
-                                                                title   => "[% 'Eliminar Campo' | i18n %]",
-                                                                alternClass => "botonCentradoTabla"
-                                    ) ;
-                        [% END %]
+                    [% PERL %]
+                        print C4::AR::Filtros::action_set_button(    
+                              title           => "[% 'Campo' | i18n %]",
+                              button          => 'btn btn-primary',
+                              actions         => [
+                                                  {title    => "[% 'Editar' | i18n %]", 
+                                                    action  => 'mostrarModificarCampo("[% catalogacion.getId %]");',
+                                                    icon    => "icon-pencil"
+                                                  },
+                                                   {title   => "[% 'Eliminar' | i18n %]", 
+                                                    action  => 'eliminarCampo("[% catalogacion.getId %]");',
+                                                    icon    => "icon-trash"
+                                                   },
+                                                  ],
+                                popover       => {text  => 'Esta acci&oacute;n se aplica para todos los ejemplares seleccionados', 
+                                                  title => 'Atenci&oacute;n'},
+
+                                ) ;
+                    [% END %]    
+
                 [% END %]
                 
                 </td> 
 	        </tr>
         [% END %]
-            
+        </tdoby>
         </table>
   </div>    
 </fieldset>
@@ -129,7 +130,7 @@
 <div class="form-actions">    
     [% PERL %]
                 print C4::AR::Filtros::to_Button(       text    => "[% 'Agregar Campo' | i18n %]",
-                                                        boton   => "btn btn-large btn-primary",
+                                                        boton   => "btn btn-primary",
                                                         onClick => "mostrarAgregarCampo();",
                                                         title   => "[% 'Agregar Campo' | i18n %]",
                                                         width   => "auto",
