--- a/intranet/htdocs/intranet-tmpl/catalogacion/visualizacionOPAC/detalleVisualizacionOpac.tmpl
+++ b/intranet/htdocs/intranet-tmpl/catalogacion/visualizacionOPAC/detalleVisualizacionOpac.tmpl
@@ -16,7 +16,7 @@
     
     function updateMostrarTabla(responseText){
         $("#tablaResultCampos").html(responseText);
-        zebra("tabla_datos");  
+        //zebra("tabla_datos");  
     }
     
     function actualizarOrdenCampo(){
@@ -49,7 +49,7 @@
     
     function updateEditSubcampos(responseText){
         $("#tablaResultSubCampos").html(responseText);
-        zebra("tabla_datos_sub_campos");  
+        //zebra("tabla_datos_sub_campos");  
     }
     
         function actualizarOrdenSubCampos(){
@@ -166,11 +166,12 @@
         <div class="form-actions">
             [% PERL %]
                     print C4::AR::Filtros::to_Button(   text    => "[% 'Agregar Vista' | i18n %]",
-                                                        boton   => "btn btn-large btn-primary",
+                                                        boton   => "btn btn-primary",
                                                         onClick => "agregarVisualizacion()",
                                                         title   => "[% 'Agregar Vista' | i18n %]",
                                                         width => "auto",
                                                         alternClass => "botonCentrado",
+                                                        inline => "1"
                             ) ;
             [% END %]
 
