--- a/intranet/htdocs/intranet-tmpl/admin/referencias/referencias_home.tmpl
+++ b/intranet/htdocs/intranet-tmpl/admin/referencias/referencias_home.tmpl
@@ -8,29 +8,33 @@
 </script>
 
 <div class="permisos">
-    <br><br>
+    <form onsubmit="return false" class="form-horizontal">
     <fieldset>
-        <legend class="titulo_legend">[% "Selecci&oacute;n de tablas de referencia" | i18n %]</legend>
-        <div class="permisos_selector">
-            <ul>
-                <li class="sub_item">
-                    <label for="id_ui"> Tabla.: </label>
-                    [% combo_tablas %]
-                </li>
+        <legend class="titulo_legend">[% "Selecci&oacute;n de tablas de referencia" | i18n %]</legend>       
+        
+            <div class="permisos_selector">
+                <div class="control-group">
+                    <label class="control-label" for="id_ui"> [% "Tabla" | i18n %]: </label>
+                    <div class="controls">
+                        [% combo_tablas %]
+                    </div>
+            </div>
+            
+            <div class="form-actions">
+
                 [% PERL %]
                     print C4::AR::Filtros::to_Button(   text    => "[% 'Obtener Tabla' | i18n %]",
-                                                        boton   => "boton_agregar",
+                                                        boton   => "btn btn-primary",
                                                         onClick => "obtenerTabla();",
                                                         title   => "[% 'Obtener Tabla' | i18n %]",
-                                                        alternClass => "botonCentrado",
+                                                        inline  => "1"
                             ) ;
                 [% END %]
-            </ul>
-        </div>
-        <br>
-        <br>
-        <br>
+            </div>
+
     </fieldset>
+    
+    </form>
     <div class="detalle_tabla" id="detalle_tabla"> </div>
 </div>
 
