--- a/intranet/htdocs/intranet-tmpl/catalogacion/visualizacionINTRA/visualizacionIntra.tmpl
+++ b/intranet/htdocs/intranet-tmpl/catalogacion/visualizacionINTRA/visualizacionIntra.tmpl
@@ -31,7 +31,7 @@ $(document).ready(function() {
 
 <input type="hidden" id="idEncabezado">
 
-<div class="titulos" >[% 'Visualizaci&oacute;n de campos MARC en INTRANET' | i18n %]</div>
+<h3>[% 'Visualizaci&oacute;n de campos MARC en INTRANET' | i18n %]</h3>
 <form class="form-horizontal">
     <fieldset>
         <legend>[% "Seleccione el esquema a configurar:" | i18n %]</legend>
